syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.dsh.data.model.device";
option java_multiple_files = true;

// Info about the dynamic state of a Matter device that is persisted in a Proto DataStore.
message HSVColor {
    // hue value
    int32 hue = 1;

    // saturation value
    int32 saturation = 2;

    // value value
    int32 value = 3;
}

message DeviceState {
    // Timestamp when the state was captured.
    google.protobuf.Timestamp date_captured = 1;

    // Device ID within the app's fabric.
    int64 device_id = 2;

    // Whether the device is offline (false) or online (true)
    bool online = 3;

    // Whether the device is off (false) or on (true).
    bool on = 4;

    // Device control level/brightness
    int32 brightness = 5;

    // Device color
    HSVColor color = 6;

    // Device control color temperature
    int32 color_temperature = 7;

    // Fan mode
    int32 fan_mode = 8;

    // Fan speed
    int32 fan_speed = 9;
}

message DeviceStates {
  repeated DeviceState device_states = 2;
}